<resources>
    <string name="app_name">AutoHelper</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="titles">
        <item>Меня заперли</item>
        <item>Предупредить</item>
        <item>Маяки на карте</item>
        <item>Посты ГАИ</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Основные</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="web_adress">Сетевой адрес</string>
    <string name="def_web_adress">tcp://iot.eclipse.org:1883</string>
    <string name="def_subsrib_kanal">SHIPOV/AVTO/</string>
    <string name="sub_kanal">канал подписки по для теста</string>
    <string name="def_publish_adres">SHIPOV/AVTO/</string>
    <string name="write_kanal">канал для сообщений</string>
    <string name="clean">Очистить</string>
    <string name="pref_header_general_open">Настройки для Открыть</string>
    <string name="pref_header_general_warn">Настройки для Предупредить</string>
    <string name="open_key_sub_kanal">example_text</string>
    <string name="open_key_web_adress">example_text1</string>
    <string name="open_key_write_kanal">example_text2</string>
    <string name="warn_key_sub_kanal">warn_key_sub_kanal</string>
    <string name="warn_key_web_adress">warn_key_web_adress</string>
    <string name="warn_key_write_kanal">warn_key_write_kanal</string>
</resources>
