<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/def_subsrib_kanal"
        android:inputType="textCapWords"
        android:key="@string/open_key_sub_kanal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sub_kanal" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/def_web_adress"
        android:inputType="textCapWords"
        android:key="@string/open_key_web_adress"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/web_adress" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/def_publish_adres"
        android:inputType="textCapWords"
        android:key="@string/open_key_write_kanal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/write_kanal" />

</PreferenceScreen>
